Identity entegrasyonu yapıldı.

--- a/HepsiBurada.MODELS/HepsiBurada.MODELS.csproj
+++ b/HepsiBurada.MODELS/HepsiBurada.MODELS.csproj
@@ -75,6 +75,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IdentityModels\Role.cs" />
+    <Compile Include="IdentityModels\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
