--- a/HepsiBurada.WEB.UI/HepsiBurada.WEB.UI.csproj
+++ b/HepsiBurada.WEB.UI/HepsiBurada.WEB.UI.csproj
@@ -129,9 +129,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="App_Start\StartUp.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="HepsiBurada\WEB\UI\App_Start\Startup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
