--- a/HepsiBurada.DAL/HepsiBurada.DAL.csproj
+++ b/HepsiBurada.DAL/HepsiBurada.DAL.csproj
@@ -75,6 +75,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201902201838592_Identity.cs" />
+    <Compile Include="Migrations\201902201838592_Identity.Designer.cs">
+      <DependentUpon>201902201838592_Identity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="MyContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -86,6 +92,11 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201902201838592_Identity.resx">
+      <DependentUpon>201902201838592_Identity.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
