--- a/HepsiBurada.BLL/HepsiBurada.BLL.csproj
+++ b/HepsiBurada.BLL/HepsiBurada.BLL.csproj
@@ -75,7 +75,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Identity\MembershipTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HepsiBurada.DAL\HepsiBurada.DAL.csproj">
