--- a/HepsiBurada.MODELS/HepsiBurada.MODELS.csproj
+++ b/HepsiBurada.MODELS/HepsiBurada.MODELS.csproj
@@ -76,9 +76,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\IdentityRoles.cs" />
+    <Compile Include="Enums\MessageStates.cs" />
     <Compile Include="IdentityModels\Role.cs" />
     <Compile Include="IdentityModels\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ErrorViewModel.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\RegisterViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
