--- a/HepsiBurada.BLL/HepsiBurada.BLL.csproj
+++ b/HepsiBurada.BLL/HepsiBurada.BLL.csproj
@@ -67,6 +67,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -75,9 +76,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Identity\MembershipTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\RepositoryBase.cs" />
+    <Compile Include="Services\Senders\EmailService.cs" />
+    <Compile Include="Services\Senders\IMessageService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HepsiBurada.DAL\HepsiBurada.DAL.csproj">
