--- a/HepsiBurada.BLL/HepsiBurada.BLL.csproj
+++ b/HepsiBurada.BLL/HepsiBurada.BLL.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Helpers\StringHelper.cs" />
     <Compile Include="Identity\MembershipTools.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\NotebookRepo.cs" />
+    <Compile Include="Repository\NotebookYorumRepo.cs" />
     <Compile Include="Repository\RepositoryBase.cs" />
     <Compile Include="Services\Senders\EmailService.cs" />
     <Compile Include="Services\Senders\IMessageService.cs" />
