--- a/HepsiBurada.DAL/HepsiBurada.DAL.csproj
+++ b/HepsiBurada.DAL/HepsiBurada.DAL.csproj
@@ -79,6 +79,14 @@
     <Compile Include="Migrations\201903021041212_a1.Designer.cs">
       <DependentUpon>201903021041212_a1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903111746063_a2.cs" />
+    <Compile Include="Migrations\201903111746063_a2.Designer.cs">
+      <DependentUpon>201903111746063_a2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201903112140467_a3.cs" />
+    <Compile Include="Migrations\201903112140467_a3.Designer.cs">
+      <DependentUpon>201903112140467_a3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MyContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -96,6 +104,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201903021041212_a1.resx">
       <DependentUpon>201903021041212_a1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903111746063_a2.resx">
+      <DependentUpon>201903111746063_a2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903112140467_a3.resx">
+      <DependentUpon>201903112140467_a3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
